--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<<<<<<< HEAD
-<h1>🚀 Auto Deploy from Jenkins date is 10 jan 2026 6-50PM Rama</h1>
-=======
-<h1>Auto Deploy from Jenkins date is 10 jan 2026 6-55 PM YOU DID DP</h1>
->>>>>>> 939ca18 (Add Jenkins Nginx deploy pipeline2)
+<h1>Auto Deploy from Jenkins date is 10 jan 2026 07-05 PM YOU WON DP</h1>
 </body>
 </html>
 
