Add Jenkins Nginx deploy pipeline3

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Welcome</title>
+  <style>
+    body {
+      background-color: green;
+      color: white;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      padding-top: 150px;
+    }
+  </style>
+</head>
 <body>
-<h1>Auto Deploy from Jenkins date is 10 jan 2026 07-05 PM YOU WON DP</h1>
+  <h1>Welcome Dhandapani</h1>
+  <h2>DevOps Practice Environment</h2>
 </body>
 </html>
 
