--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>Welcome</title>
   <style>
     body {
-      background-color: green;
-      color: white;
+      background-color: yellow;
+      color: Black;
       text-align: center;
       font-family: Arial, sans-serif;
-      padding-top: 150px;
+      padding-top: 1250px;
     }
   </style>
 </head>
