Add Jenkins Nginx deploy pipeline3

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Welcome</title>
   <style>
     body {
-      background-color: yellow;
-      color: Black;
+      background-color: Blue;
+      color: Brown;
       text-align: center;
       font-family: Arial, sans-serif;
       padding-top: 250px;
