--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       background-color: Blue;
-      color: Brown;
+      color: White;
       text-align: center;
       font-family: Arial, sans-serif;
       padding-top: 250px;
